--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+      text-align: center;
       background-color: #eddace;
       color:#a8755e ;
       font-family: 'Pinyon Script', cursive;
