--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
     h1 {
     color: #a8755;
      font-family: 'Montserrat', sans-serif;
+     font-size: 36px;
   }
   h2 {
     color: #ab6367;
