--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
     font-weight: bold;
     font-size: 48px;
     text-decoration: underline;
+    text-align: left;
   }
   p {
     color:	#EFDFBB;
