--- a/style.css
+++ b/style.css
@@ -39,17 +39,16 @@ body {
   a:visited {
     color: #EFDFBB;
   }
-  nav {
-        position: absolute;
-        top: 0px;
-        right: 0px;
-  }
+ 
   nav a{
         color: #fff;
         text-decoration: none;
         background-color: #eddace;
         border-radius: 5px;
         padding: 3px;
+        position: absolute;
+        top: 0px;
+        right: 0px
   }
   
   nav a:visited{
