--- a/style.css
+++ b/style.css
@@ -23,14 +23,13 @@ body {
     font-family: 'Pinyon Script', cursive;
     font-size: 24px;
   }
-  a href{
+  a {
     text-align: left;
     color: #a8755;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     font-size: 48px;
     text-decoration: underline;
-    
   }
   p {
     color:	#EFDFBB;
