--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
     text-decoration: underline;
   }
   p {
-    color:	#EFDFBB;
+    color:	#E18E96;
   font-family: 'Montserrat', sans-serif;
   }
   a:link {
