--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     }
     
     h1 {
-    color: #a8755;
+    color: #9678B6;
      font-family: 'Montserrat', sans-serif;
      font-size: 36px;
   }
