--- a/style.css
+++ b/style.css
@@ -57,3 +57,9 @@ body {
   nav a:visited{
         color:#fff;
   }
+  
+  footer {
+        color: #ab6367;
+       font-family: 'Montserrat', sans-serif;
+       font-size: 18px;
+  }
