--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     }
     
     h1 {
-    color: #A0785A;
+    color: #DEA5A4;
      font-family: 'Montserrat', sans-serif;
      font-size: 36px;
   }
