--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
   
   h2 {
     color: #ab6367;
-    font-family: 'Pinyon Script', cursive;
+    font-family: 'Verdana', sans-serif;
     font-size: 30px;
   }
   a {
