--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     }
     
     h1 {
-    color: #d2b48c;
+    color: ##A0785A;
      font-family: 'Montserrat', sans-serif;
      font-size: 36px;
   }
@@ -59,7 +59,7 @@ body {
   }
   
   footer {
-        color: #ab6367;
+        color: #A0785A;
        font-family: 'Montserrat', sans-serif;
        font-size: 18px;
   }
