--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   }
   a:link {
-    color: #bc2c43;
+    color: ##ab6367;
     font-size: 24px;
   }
   a:hover {
