--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
   }
   p {
         text-align: center;
-    color:	#DEA5A4;
+    color:	#987456;
   font-family: 'Montserrat', sans-serif;
   }
   a:link {
