--- a/style.css
+++ b/style.css
@@ -34,11 +34,11 @@ body {
   }
   p {
         text-align: center;
-    color:	#987456;
+    color:	#ab6367;
   font-family: 'Montserrat', sans-serif;
   }
   a:link {
-    color: ##ab6367;
+    color: #987456;
     font-size: 24px;
   }
   a:hover {
