--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
   
   h2 {
         text-align: center;
-    color: #CC66CC;
+    color: #996633;
     font-family: 'Verdana', sans-serif;
     font-size: 30px;
   }
@@ -34,7 +34,7 @@ body {
   }
   p {
         text-align: center;
-    color:	#CC66CC;
+    color:	#996633;
   font-family: 'Montserrat', sans-serif;
   }
   a:link {
