--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
   
   h2 {
         text-align: center;
-    color: #eae0c8;
+    color: #fff8dc;
     font-family: 'Verdana', sans-serif;
     font-size: 30px;
   }
@@ -34,7 +34,7 @@ body {
   }
   p {
         text-align: center;
-    color:	#eae0c8;
+    color:	#fff8dc;
   font-family: 'Montserrat', sans-serif;
   }
   a:link {
