--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
   h2 {
         text-align: center;
     color: #fff8dc;
-    font-family: 'Verdana', sans-serif;
+    font-family: 'Satisfy', cursive;
     font-size: 30px;
   }
   a {
