--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     
     h1 {
           text-align: center;
-    color: ##A0785A;
+    color: #eddace;
      font-family: 'Montserrat', sans-serif;
      font-size: 36px;
   }
@@ -20,7 +20,7 @@ body {
   
   h2 {
         text-align: center;
-    color: #fff8dc;
+    color: #eddace;
     font-family: 'Satisfy', cursive;
     font-size: 30px;
   }
