--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
   }
   a {
     text-align: left;
-    color: #ab6367;
+    color: #a45a52;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     font-size: 48px;
