--- a/style.css
+++ b/style.css
@@ -67,6 +67,8 @@ body {
        text-align: center;
   }
 
-head {
-      margin: 2px 2px 2px 1px;
+img src {
+      margin:  10px;
+      width: 14px;
+      height: 18px;
 }
