--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
   }
   a {
     text-align: left;
-    color: #a45a52;
+    color: #987456;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     font-size: 48px;
@@ -34,7 +34,7 @@ body {
   }
   p {
         text-align: center;
-    color:	#fff8dc;
+    color:	#de5d83;
   font-family: 'Montserrat', sans-serif;
   }
   a:link {
