--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
   }
   a {
     text-align: left;
-    color: #987456;
+    color: #fff;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     font-size: 48px;
