--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
   
   h2 {
         text-align: center;
-    color: #987456;
+    color: #fff;
     font-family: 'Satisfy', cursive;
     font-size: 30px;
   }
@@ -34,7 +34,7 @@ body {
   }
   p {
         text-align: center;
-    color:	#de5d83;
+    color:	#987456;
   font-family: 'Montserrat', sans-serif;
   }
   a:link {
