--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body {
   }
   
   footer {
-        color: #A0785A;
+        color: #987456;
        font-family: 'Montserrat', sans-serif;
        font-size: 18px;
        text-align: center;
