--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
       font-family: 'Pinyon Script', cursive;
       background-image: url(https://static.pexels.com/photos/6872/cold-snow-nature-weather.jpg);
       background-size: cover;
+      opacity: 1.2;
     }
     
     h1 {
@@ -11,7 +12,8 @@ body {
     color: #987456;
      font-family: 'Montserrat', sans-serif;
      font-size: 36px;
-     text-shadow: 0 -18px 24px #cd853f;
+     text-shadow: 0 -10px 22px #cd853f;
+     text-transform: uppercase;
   }
   nav {
         position: fixed;
