--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
     
     h1 {
           text-align: center;
+          background-color: #d3d3d3;
     color: #987456;
      font-family: 'Montserrat', sans-serif;
      font-size: 36px;
