--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
   }
   p {
         text-align: center;
-    color:	#987456;
+    color:	#fff;
   font-family: 'Montserrat', sans-serif;
   }
   a:link {
