--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@ body {
           background-color: #d3d3d3;
           border-style: solid;
           border-radius: 10px;
+          margin-bottom: 5px;
+          margin-right: 15px;
+          margin-left: 15px;
     }
     
     h1 {
