--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ body {
           background-color: #d3d3d3;
           border-style: solid;
           border-radius: 10px;
-          margin-bottom: 5px;
+          margin-top: -18px;
+          margin-bottom: -24px;
           margin-right: 15px;
           margin-left: 15px;
     }
