--- a/style.css
+++ b/style.css
@@ -10,11 +10,12 @@ body {
     header {
           background-color: #d3d3d3;
           border-style: solid;
-          border-radius: 10px;
+          border-radius: 1px;
           margin-top: -18px;
           margin-bottom: -24px;
           margin-right: 15px;
           margin-left: 15px;
+          position: relative;
     }
     
     h1 {
