--- a/style.css
+++ b/style.css
@@ -8,9 +8,8 @@ body {
     }
     
     header {
-          background-color: #d3d3d3;
-          border-style: solid;
-          border-radius: 1px;
+          border: 3px solid #d3d3d3;
+          height: 18px;
           margin-top: -18px;
           margin-bottom: -24px;
           margin-right: 15px;
