--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     }
     
     header {
-          border: 3px  10px 10px solid #d3d3d3;
+          border: 3px solid #d3d3d3;
           margin-top: -18px;
           margin-bottom: -24px;
           margin-right: 15px;
