--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     }
     
     header {
+          background-color: #d3d3d3;
           border: 3px solid #d3d3d3;
           margin-top: -18px;
           margin-bottom: -24px;
