--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
      text-transform: uppercase;
      position: fixed;
      top: 5px;
+     left: 15px;
   }
   nav {
         position: fixed;
