--- a/style.css
+++ b/style.css
@@ -94,5 +94,8 @@ img src {
        border-radius: 8px;
       border-style: solid;
       outline-style: ridge;
+      position: fixed;
+      top: 12px;
+      left: 34px;
 }
 
