--- a/style.css
+++ b/style.css
@@ -83,7 +83,11 @@ body {
        font-size: 18px;
        text-align: center;
        border-style: solid;
+       border-radius: -20px;
        margin: -15px;
+       position: fixed;
+       bottom: 1px;
+       right: 10px;
   }
 
 img src {
