--- a/style.css
+++ b/style.css
@@ -101,5 +101,20 @@ img src{
       position: fixed;
       margin-top: 3px;
       margin-left: 8px;
+      top: 8px;
+      left: 10px;
 }
 
+img {
+       margin:  10px;
+      width: 14px;
+      height: 18px;
+       border-radius: 8px;
+      border-style: solid;
+      outline-style: ridge;
+      position: fixed;
+      margin-top: 3px;
+      margin-left: 8px;
+      top: 8px;
+      left: 10px;
+}
