--- a/style.css
+++ b/style.css
@@ -40,8 +40,8 @@ body {
     font-family: 'Satisfy', cursive;
     font-size: 30px;
     position: fixed;
-    top: 54px;
-    left: 348px;
+    top: 6px;
+    left: 177px;
   }
   a {
     text-align: left;
@@ -56,7 +56,7 @@ body {
     color:	#fff;
   font-family: 'Montserrat', sans-serif;
   position: fixed;
-  top: 142px;
+  top: 234px;
   left: 200px;
   }
   a:link {
@@ -124,7 +124,7 @@ img src{
         left: 362px;
   } 
   
-  ul {
+  strong {
       position: fixed;
         top: 520px;
         left: 7px;  
