--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ body {
         text-align: justify;
     color:	#fff;
   font-family: 'Montserrat', sans-serif;
+  font-size: 18px;
   position: fixed;
   top: 234px;
   left: 200px;
