--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body {
     text-decoration: underline;
   }
     p {
-        text-align: justify;
+        text-align: center;
     color:	#fff;
   font-family: 'Montserrat', sans-serif;
   font-size: 18px;
