--- a/style.css
+++ b/style.css
@@ -114,12 +114,8 @@ img src{
 
   section {
         border-style: ridge;
-        border-top: 5px;
-        border-bottom: 5px;
-        border-left: 15px;
-        border-right: 15px;
+        border-radius: 12px;
         border-color: #cd853f;
-        border-width: 10px;
         position: fixed;
         top: 269px;
         left: 676px;
