--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ body {
        right: 20px;
 }
 
-  img {
+  section {
         border-style: ridge;
         border-radius: -183px;
         border-color: #cd853f;
