--- a/style.css
+++ b/style.css
@@ -111,3 +111,9 @@ body {
         top: 760px;
         left: 12px;  
   }
+
+target blank {
+      position: fixed;
+      top: 200px;
+      left: 703px;
+}
