--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ body {
         border-style: ridge;
         border-radius: -183px;
         border-color: #cd853f;
+        border-width: 8px;
         position: fixed;
         top: 269px;
         left: 548px;
