--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
       background-image: url(https://static.pexels.com/photos/6872/cold-snow-nature-weather.jpg);
       background-size: cover;
       opacity: 1.2;
+      transition: all;
     }
     
     header {
