--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body {
       background-image: url(https://static.pexels.com/photos/6872/cold-snow-nature-weather.jpg);
       background-size: cover;
       opacity: 1.2;
-    transition: width 2s, height 2s, background-color 2s, transform 2s;
     }
     
     header {
@@ -16,6 +15,8 @@ body {
           margin-right: 15px;
           margin-left: 15px;
           position: relative;
+          transition: width 2s, height 2s, background-color 2s, transform 2s;
+          transition-duration: 1s;
     }
     
     h1 {
