--- a/style.css
+++ b/style.css
@@ -117,7 +117,11 @@ body {
   }
 
 table {
-      text-align: center;
+      vertical-align: center;
       outline: 3px ridge #987456;
+      position: fixed;
+      top: 72px;
+      left: 24px;
+      
 }
 
