--- a/style.css
+++ b/style.css
@@ -141,3 +141,10 @@ caption {
       font-size: 36px;
       font: 'Monsterrat', sans-serif  
 }
+
+tr:nth-child(5) {
+      color: #fff;
+      font: 'Monsterrat', sans-serif;
+      font-size: 36px;
+      font-weight: bold;
+}
