--- a/style.css
+++ b/style.css
@@ -142,9 +142,18 @@ caption {
       font: 'Monsterrat', sans-serif  
 }
 
+tr:nth-child (4) {
+      font: 'Monsterrat', sans-serif;
+      font-size: 24px;
+}
+
 tr:nth-child(5) {
       color: #fff;
       font: 'Monsterrat', sans-serif;
-      font-size: 36px;
+      font-size: 56px;
       font-weight: bold;
+}
+
+tr: nth-child (6) {
+      
 }
