--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ table {
       border: 3px ridge #987456;
       position: fixed;
       top: 217px;
-      left: 0;
+      left: 3px;
       border-collapse: collapse;
       width: 90%;
       height: 40px;
