--- a/style.css
+++ b/style.css
@@ -160,3 +160,19 @@ tr: nth-child (6) {
       border-bottom-width: 18px;
       font-size: 36px;
 }
+
+ td,
+figure,
+figcaption {
+text-decoration: uppercase;
+font: 'Monsterrat',sans-serif;
+font-size: 24px;
+font-weight: bold;
+color: 3987456;
+}
+th colspan {
+font: 'Monsterrat', sans-serif;
+font-size: 36px;
+color: #987456;
+font-weight: bold;
+}
