--- a/style.css
+++ b/style.css
@@ -100,11 +100,9 @@ body {
 }
 
   section {
-        position: fixed;
-        top: 292px;
-        left: 548px;
+       text-align: center;
        background-color: #987456;
-      height: 40px;
+      height: 70px;
       width: 100%;
   } 
   
