--- a/style.css
+++ b/style.css
@@ -168,17 +168,27 @@ color: #987456;
 font-weight: bold;
 }
 
-section:nth-child (2) {
-      position: fixed;
-      top: 325px;
-      text-align: center;
-      background-color: #987456;
-      height: 250px;
-      width: 100%;
+section {
+  position: relative;
+  background: -webkit-linear-gradient(90deg, #abbaab 10%, #ffffff 90%); 
+  background:    -moz-linear-gradient(90deg, #abbaab 10%, #ffffff 90%); 
+  background:     -ms-linear-gradient(90deg, #abbaab 10%, #ffffff 90%); 
+  background:      -o-linear-gradient(90deg, #abbaab 10%, #ffffff 90%); 
+  background:         linear-gradient(90deg, #abbaab 10%, #ffffff 90%);
+}
+section a {
+  width: 300px;
+  height: 25px;
+  padding: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -69px 0 0 -227px;
 }
 
-section a {
-      color: #fff;
-      border: 1px solid #d3d3d3;
-      padding: 20px;
-}
+section p {
+  position: fixed;
+  top: 182px;
+  text-align: center;
+  background-color: #987456;
+  color: #fff;
