--- a/style.css
+++ b/style.css
@@ -168,4 +168,28 @@ color: #987456;
 font-weight: bold;
 }
 
-
+section#work {
+  position: relative;
+  background: -webkit-linear-gradient(90deg, #ECE9E6 10%, #FFFFFF 90%); 
+  background:    -moz-linear-gradient(90deg, #ECE9E6 10%, #FFFFFF 90%); 
+  background:     -ms-linear-gradient(90deg, #ECE9E6 10%, #FFFFFF 90%); 
+  background:      -o-linear-gradient(90deg, #ECE9E6 10%, #FFFFFF 90%); 
+  background:         linear-gradient(90deg, #ECE9E6 10%, #FFFFFF 90%);
+  transparent linear-gradient(90deg, #ECE9E6 10%, #FFF 90%) repeat scroll 0% 0%;
+section#work {
+  width: 100%;
+  height: 250px;
+  padding: 20px;
+  text-decoration: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -130px 0 0 -978px;
+}
+section#work {
+  position: fixed;
+  top: 404px;
+  text-align: center;
+  background-color: #987456;
+  color: #fff;
+}
