--- a/style.css
+++ b/style.css
@@ -176,6 +176,8 @@ section#work {
   background:      -o-linear-gradient(90deg, #ECE9E6 10%, #FFFFFF 90%); 
   background:         linear-gradient(90deg, #ECE9E6 10%, #FFFFFF 90%);
   transparent linear-gradient(90deg, #ECE9E6 10%, #FFF 90%) repeat scroll 0% 0%;
+}
+
 section#work {
   width: 100%;
   height: 250px;
