--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ body {
   
   strong {
       position: fixed;
-        bottom: -35px;
+        top: 650px;
         left: 12px;  
         color: #deb887;
   }
