--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
     }
     
     header {
+          background-color: #d3d3d3;
           border: -8px solid #d3d3d3;
           margin-top: -2px;
           margin-bottom: -31px;
