--- a/style.css
+++ b/style.css
@@ -11,10 +11,7 @@ body {
     header {
           background-color: #d3d3d3;
           border: -8px solid #d3d3d3;
-          margin-top: -2px;
-          margin-bottom: -31px;
-          margin-right: 15px;
-          margin-left: 15px;
+         margin: -2px 15px -139px;
           position: relative;
           transition: width 2s, height 2s, background-color 2s, transform 2s;
           transition-duration: 1s;
