--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
           background-color: #d3d3d3;
           border: -8px solid #d3d3d3;
          margin: 1px 0px -139px;
-          position: relative;
+          position: absolute;
           transition: width 2s, height 2s, background-color 2s, transform 2s;
           transition-duration: 1s;
           width: 100%;
