--- a/style.css
+++ b/style.css
@@ -7,6 +7,33 @@ body {
       opacity: 1.2;
       margin: 0;
     }
+    header,
+    h2, 
+    h1 {
+        background-color: #d3d3d3;
+          border: -8px solid #d3d3d3;
+         margin: 1px 0px -139px;
+          position: absolute;
+          transition: width 2s, height 2s, background-color 2s, transform 2s;
+          transition-duration: 1s;
+          width: 100%;  
+           text-align: center;
+    color: #987456;
+     font-family: 'Montserrat', sans-serif;
+     font-size: 36px;
+     text-shadow: 0 -2px 36px #cd853f;
+     text-transform: uppercase;
+     position: fixed;
+     top: 72px;
+     left: 780px;
+      text-align: center;
+    color: #fff;
+    font-family: 'Satisfy', cursive;
+    font-size: 30px;
+    position: fixed;
+    top: 6px;
+    left: 177px;
+    }
     
     header {
           background-color: #d3d3d3;
