--- a/style.css
+++ b/style.css
@@ -180,11 +180,12 @@ section#work {
   width: 100%;
   height: 250px;
   padding: 20px;
-  text-decoration: none;
   position: absolute;
   top: 50%;
   left: 50%;
   margin: -130px 0 0 -978px;
+  text-align: center;
+   text-decoration: none;
 }
 section#work {
   position: fixed;
