--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ body {
   nav a{
         color: #fff;
         text-decoration: none;
-        background-color: #987456;
+        background-color: #cd853f;
         border-radius: 5px;
         padding: 3px;
   }
