--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ section#work {
 section#work {
   position: fixed;
   top: 404px;
-  left: 0;
+  left: 966px;
   text-align: center;
   background-color: #987456;
   color: #fff;
