--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ section#work {
   top: 404px;
   left: 966px;
   text-align: center;
-  background-color: #987456;
-  color: #fff;
+  background-color: #d3d3d3;
+  color: #987456;
   text-decoration: none;
 }
