--- a/style.css
+++ b/style.css
@@ -168,6 +168,12 @@ font-weight: bold;
 
 section#work {
   position: relative;
+  
+  background: -webkit-linear-gradient(90deg, #D1913C 10%, #FFD194 90%); /* Chrome 10+, Saf5.1+ */
+  background:    -moz-linear-gradient(90deg, #D1913C 10%, #FFD194 90%); /* FF3.6+ */
+  background:     -ms-linear-gradient(90deg, #D1913C 10%, #FFD194 90%); /* IE10 */
+  background:      -o-linear-gradient(90deg, #D1913C 10%, #FFD194 90%); /* Opera 11.10+ */
+  background:         linear-gradient(90deg, #D1913C 10%, #FFD194 90%); /* W3C */
 }
 
 section#work {
