--- a/style.css
+++ b/style.css
@@ -16,11 +16,11 @@ body {
           transition: width 2s, height 2s, background-color 2s, transform 2s;
           transition-duration: 1s;
           width: 100%;
-          background: -webkit-linear-gradient(90deg, #abbaab 10%, #ffffff 90%); /* Chrome 10+, Saf5.1+ */
-  background:    -moz-linear-gradient(90deg, #abbaab 10%, #ffffff 90%); /* FF3.6+ */
-  background:     -ms-linear-gradient(90deg, #abbaab 10%, #ffffff 90%); /* IE10 */
-  background:      -o-linear-gradient(90deg, #abbaab 10%, #ffffff 90%); /* Opera 11.10+ */
-  background:         linear-gradient(90deg, #abbaab 10%, #ffffff 90%); /* W3C */
+          background: -webkit-linear-gradient(90deg, #E6DADA 10%, #274046 90%); /* Chrome 10+, Saf5.1+ */
+  background:    -moz-linear-gradient(90deg, #E6DADA 10%, #274046 90%); /* FF3.6+ */
+  background:     -ms-linear-gradient(90deg, #E6DADA 10%, #274046 90%); /* IE10 */
+  background:      -o-linear-gradient(90deg, #E6DADA 10%, #274046 90%); /* Opera 11.10+ */
+  background:         linear-gradient(90deg, #E6DADA 10%, #274046 90%); /* W3C */
         
     }
     
