--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@ section#work {
   left: 966px;
   text-align: center;
   background-color: #d3d3d3;
-  color: #987456;
+  color: #fff;
   text-decoration: none;
 }
 
