--- a/style.css
+++ b/style.css
@@ -228,14 +228,14 @@ iframe {
       display: block;
 }
 
-iclass {
+btn {
   -webkit-border-radius: 12;
   -moz-border-radius: 12;
-  border-radius: 12px;
-  font-family: Arial;
+  border-radius: 18px;
+  font-family: 'Monsterrat' , sans-serif;
   color: #ffffff;
-  font-size: 17px;
+  font-size: 28px;
   background: #cfba9b;
-  padding: 10px 20px 10px 20px;
+  padding: 15px 20px 15px 20px;
   text-decoration: none;
 }
