--- a/style.css
+++ b/style.css
@@ -111,8 +111,8 @@ body {
   
   strong {
       position: fixed;
-        top: 650px;
-        left: 12px;  
+        top: 25px;
+        right: 28px;  
         color: #deb887;
   }
 
