--- a/style.css
+++ b/style.css
@@ -205,6 +205,7 @@ section#work {
   position: fixed;
   top: 404px;
   left: 966px;
+  bottom: 35px;
   text-align: center;
   background-color: #d3d3d3;
   color: #fff;
