--- a/style.css
+++ b/style.css
@@ -113,11 +113,9 @@ body {
       position: fixed;
         top: 93px;
         right: 35px;  
-         color: #fff;
+        color: #fff;
         text-decoration: none;
         background-color: #cd853f;
-        border-radius: 5px;
-        padding: 3px;
   }
 
 table {
@@ -194,7 +192,7 @@ section#work {
   width: 80%;
   height: 150px;
   padding: 10px;
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
   margin: -125px 0 0 -978px;
