--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ body {
         text-decoration: none;
         background-color: #cd853f;
         display: inline;
+        font-size: 24px;
   }
 
 table {
