--- a/style.css
+++ b/style.css
@@ -252,7 +252,15 @@ nav btn {
 #lightgallery {
       position: fixed;
       top: 217px;
-      left: 20px;
+      left: 3px;
       width: 90%;
       height: 40px;
 }
+ .lightgallery {
+      position: fixed;
+      top: 300px;
+      left: 150px;
+      text-align: center;
+      width: 0%;
+      height: 20px;
+    }
