--- a/style.css
+++ b/style.css
@@ -249,7 +249,7 @@ nav btn {
   width: 70%;
 }
 
- .lightgallery {
+ #lightgallery {
       position: fixed;
       top: 300px;
       left: 350px;
@@ -258,7 +258,7 @@ nav btn {
       height: 20px;
     }
 
-.twitter-timeline {
+#twitter-timeline {
   position: fixed;
   top: 258px;
   left: 20px;
