--- a/final.css
+++ b/final.css
@@ -23,7 +23,7 @@
 }
 
 .jumbotron h1 {
-  color: #fff;
+  color: #00000;
   font-size: 48px;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
