--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-      background-color: #eddace;
+      background-color: #ffe4c4;
       color:#a8755e ;
       font-family: 'Pinyon Script', cursive;
       background-image: url(https://static.pexels.com/photos/6872/cold-snow-nature-weather.jpg);
