--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
       background-color: #ffe4c4;
       color:#a8755e ;
       font-family: 'Pinyon Script', cursive;
-      background-image: url(https://static.pexels.com/photos/6872/cold-snow-nature-weather.jpg);
+      background-image: url(https://static.pexels.com/photos/62275/pexels-photo-62275.jpeg);
       background-size: cover;
       opacity: 1.2;
       margin: 0;
