--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     
     header {
           background-color: #ffffff;
-          border: 0px solid #ffffff;
+          border: 3px none #ffffff;
          margin: 1px 0px -139px;
           position: absolute;
           transition: width 2s, height 2s, background-color 2s, transform 2s;
