--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     }
     
     header {
-          background-color: #ffffff;
+          background-color: transparent;
          margin: 1px 0px -139px;
           position: absolute;
           transition: width 2s, height 2s, background-color 2s, transform 2s;
