--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
     h1 {
           text-align: center;
     color: #000000;
-     font-family: 'Montserrat', sans-serif;
+     font-family: 'Roboto-Slab', serif;
      font-size: 36px;
      text-transform: uppercase;
      position: fixed;
