--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
-      background-color: #ffe4c4;
-      color:#a8755e ;
+      background-color: transparent;
       font-family: 'Pinyon Script', cursive;
       background-image: url(https://static.pexels.com/photos/62275/pexels-photo-62275.jpeg);
       background-size: cover;
