--- a/style.css
+++ b/style.css
@@ -42,9 +42,9 @@ body {
   }
   a {
     text-align: left;
-    color: #fff;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
+    color: #00000;
+    font-family: 'Roboto', sans-serif;
+    font-weight: normal;
     font-size: 48px;
     text-decoration: underline;
   }
