--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
     p {
         text-align: center;
     color:	#fff;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 23px;
   position: fixed;
   top: 140px;
