--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ body {
     color:	#fff;
   font-family: 'Roboto', sans-serif;
   font-size: 23px;
+  font-weight: normal;
   position: fixed;
   top: 140px;
   left: 396px;
