--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body {
   }
     p {
         text-align: center;
-    color:	#fff;
+    color:	#000000;
   font-family: 'Roboto', sans-serif;
   font-size: 28px;
   font-weight: normal;
