--- a/style.css
+++ b/style.css
@@ -8,12 +8,12 @@ body {
     
     header {
     
-background: -moz-linear-gradient(left, rgba(255,247,201,1) 0%, rgba(255,232,186,1) 23%, rgba(255,229,182,1) 49%, rgba(249,223,177,1) 70%, rgba(234,202,163,1) 100%);
-background: -webkit-gradient(left top, right top, color-stop(0%, rgba(255,247,201,1)), color-stop(23%, rgba(255,232,186,1)), color-stop(49%, rgba(255,229,182,1)), color-stop(70%, rgba(249,223,177,1)), color-stop(100%, rgba(234,202,163,1)));
-background: -webkit-linear-gradient(left, rgba(255,247,201,1) 0%, rgba(255,232,186,1) 23%, rgba(255,229,182,1) 49%, rgba(249,223,177,1) 70%, rgba(234,202,163,1) 100%);
-background: -o-linear-gradient(left, rgba(255,247,201,1) 0%, rgba(255,232,186,1) 23%, rgba(255,229,182,1) 49%, rgba(249,223,177,1) 70%, rgba(234,202,163,1) 100%);
-background: -ms-linear-gradient(left, rgba(255,247,201,1) 0%, rgba(255,232,186,1) 23%, rgba(255,229,182,1) 49%, rgba(249,223,177,1) 70%, rgba(234,202,163,1) 100%);
-background: linear-gradient(to right, rgba(255,247,201,1) 0%, rgba(255,232,186,1) 23%, rgba(255,229,182,1) 49%, rgba(249,223,177,1) 70%, rgba(234,202,163,1) 100%);
+background: -moz-linear-gradient(left, rgba(255,247,201,1) 0%, rgba(249,223,177,1) 100%);
+background: -webkit-gradient(left top, right top, color-stop(0%, rgba(255,247,201,1)), color-stop(100%, rgba(249,223,177,1)));
+background: -webkit-linear-gradient(left, rgba(255,247,201,1) 0%, rgba(249,223,177,1) 100%);
+background: -o-linear-gradient(left, rgba(255,247,201,1) 0%, rgba(249,223,177,1) 100%);
+background: -ms-linear-gradient(left, rgba(255,247,201,1) 0%, rgba(249,223,177,1) 100%);
+background: linear-gradient(to right, rgba(255,247,201,1) 0%, rgba(249,223,177,1) 100%);
 
     }
     
