--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ background: linear-gradient(to right, rgba(255,247,201,1) 0%, rgba(249,223,177,1
   }
   
   nav a:visited{
-        color:#fff5ee;
+        color:#fffafa;
   }
   
   footer {
