--- a/style.css
+++ b/style.css
@@ -256,5 +256,13 @@ ul {
 }
 
 li {
-      display: inline;
+      float:left;
+}
+
+li a{
+      display: block;
+      color: #000000;
+      text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
