--- a/style.css
+++ b/style.css
@@ -265,4 +265,7 @@ li a{
       text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    position: fixed;
+    top: 17px;
+    right: 28px;
 }
