--- a/wedding.css
+++ b/wedding.css
@@ -43,7 +43,7 @@ a{
 .wedding h1{
 	font-family: 'tangerinebold';
 	font-size: 78px;
-	color: white;
+	color: #d1e0d7;
 	position: absolute;
 	left: 374px;
 	top: 596px;
