--- a/wedding.css
+++ b/wedding.css
@@ -15,7 +15,7 @@ header nav {
 	background-color: beige;
 	color: black;
 	font-family: "libre_baskervillebold";
-	font-size: 32px;
+	font-size: 38px;
 	display: inline;
 	position: absolute;
 	left: -22px;
@@ -41,7 +41,7 @@ a{
 
 
 .wedding h1{
-	font-family: 'tangerinebold';
+	font-family: 'grafolita script';
 	font-size: 78px;
 	color: #d1e0d7;
 	position: absolute;
