--- a/wedding.css
+++ b/wedding.css
@@ -76,12 +76,12 @@ a{
 }
 
 hr{
-	color: beige;
+	color: white;
 	width: 100%;
 	position: absolute;
 	top: 849px;
 	height: 12px;
-	border: 2px;
+	
         
 
 }
