--- a/wedding.css
+++ b/wedding.css
@@ -13,7 +13,7 @@ img{
 }
 
 header nav {
-	background-color: beige;
+	background-color: #f5f5dc;
 	color: black;
 	font-family: "essones-display";
 	font-size: 38px;
@@ -65,6 +65,8 @@ a{
 }
 
 .ceremony ul{
+	background-color: #f5f5dc;
+	width: 100%;
 	font-family: "essones-display";
 	font-size: 24px;
 	color: white;
