--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
       font-family: 'Pinyon Script', cursive;
-      background-image: url(https://static.pexels.com/photos/62275/pexels-photo-62275.jpeg);
+      background-color:#dfdedf;
       background-size: cover;
       opacity: 1.2;
       margin: 0;
