--- a/css/main.css
+++ b/css/main.css
@@ -79,7 +79,7 @@ header::after{
 }
 
 .img-container{
-	background-image: url(img/journal.jpg);
+	background-image: url('https://images.pexels.com/photos/1018133/pexels-photo-1018133.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
 	height: 100%;
 	background-position: center;
 	background-repeat: no-repeat;
