--- a/css/main.css
+++ b/css/main.css
@@ -79,7 +79,7 @@ header::after{
 }
 
 .img-container{
-	background-image: url('https://images.pexels.com/photos/1018133/pexels-photo-1018133.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
+	background-image: url(https://images.pexels.com/photos/1018133/pexels-photo-1018133.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
 	height: 100%;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -153,7 +153,7 @@ header::after{
 
 h2{
 	font-size: 30px;
-	font-family:"triplex-serif",serif;
+	
 	text-align: center;
 	padding-top: 5px;
 	text-transform: none;
