--- a/css/main.css
+++ b/css/main.css
@@ -169,11 +169,11 @@ p{
 
 /*About Section*/
 .about-section{
-	width: 100%;
+    width: 100%;
     padding: 5px;
     margin-top: 25px;
     text-align: center;
-    background: #f5f5f5;
+    background-image:url(img/about-sec.jpg);
     border: 1px solid #985855;
 }
 
