--- a/css/main.css
+++ b/css/main.css
@@ -173,7 +173,7 @@ p{
     padding: 5px;
     margin-top: 25px;
     text-align: center;
-    background-image:url('img/about-sec.jpg');
+    background-image:url('../img/about-sec.jpg');
     border: 1px solid #985855;
 }
 
