--- a/css/print.css
+++ b/css/print.css
@@ -163,6 +163,7 @@ a:active{
 .print-title{
 	margin-bottom: 80px;
 	display: block;
+	background-image:url('../img/content-bg.jpg);
 }
 
 .print-title h1{
