--- a/css/main.css
+++ b/css/main.css
@@ -321,6 +321,7 @@ h2{
 	padding: 50px;
     margin-top: 25px;
     text-align: center;
+    background-image:url('../img/contactt-sec.jpg');
 }
 
 .contact-section span{
